<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_no"
                android:background="@drawable/textfield_selector"
                android:layout_marginTop="10dp"
                android:inputType="phone" />

            <RadioGroup
                android:id="@+id/radioButtonSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="male" />

                <RadioButton
                    android:id="@+id/radioButtonFeMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="female" />
            </RadioGroup>

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/textfield_selector"
                android:hint="@string/firstName" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/textfield_selector"
                android:hint="@string/lastName" />

            <EditText
                android:id="@+id/editMotherMiddleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="motherMiddleName"
                android:background="@drawable/textfield_selector"/>

            <EditText
                android:id="@+id/editNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="nationality"
                android:text="indian"
                android:background="@drawable/textfield_selector"/>

            <EditText
                android:id="@+id/editDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/dob"
                android:background="@drawable/textfield_selector"/>
            <EditText
                android:id="@+id/edAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/address"
                android:background="@drawable/textfield_selector"/>
            <EditText
                android:id="@+id/edPinCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/pincode"
                android:background="@drawable/textfield_selector"/>
            <Spinner
                android:id="@+id/spinnerState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/textfield_selector"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_shape"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>