<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtlayout_old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:textColorHint="@color/grey">

                <EditText
                    android:id="@+id/oldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_50dp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:hint="@string/lblCurrentPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtlayout_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:textColorHint="@color/grey">

                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_50dp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:hint="@string/lblNewPassword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtlayout_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:textColorHint="@color/grey">

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_50dp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:hint="@string/lblConfirmPassword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topLayout"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="Change Password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>